@@ -393,8 +393,8 @@ defmodule Protox.JsonEncodeTest do
 
   describe "JSON libraries" do
     test "Success: Jason" do
-      msg = %Msg{msg_k: %{1 => "a", 2 => "b"}}
-      json = Protox.json_encode!(msg, json_library: Jason)
+      msg = %WithJason.Msg{msg_k: %{1 => "a", 2 => "b"}}
+      json = Protox.json_encode!(msg)
 
       assert json == [
                "{",
@@ -404,8 +404,8 @@ defmodule Protox.JsonEncodeTest do
     end
 
     test "Success: Poison" do
-      msg = %Msg{msg_k: %{1 => "a", 2 => "b"}}
-      json = Protox.json_encode!(msg, json_library: Poison)
+      msg = %WithPoison.Msg{msg_k: %{1 => "a", 2 => "b"}}
+      json = Protox.json_encode!(msg)
 
       assert json == [
                "{",
@@ -415,10 +415,12 @@ defmodule Protox.JsonEncodeTest do
     end
 
     test "Failure: Poison" do
-      invalid_field = %ProtobufTestMessages.Proto3.TestAllTypesProto3{optional_int32: make_ref()}
+      invalid_field = %WithPoison.ProtobufTestMessages.Proto3.TestAllTypesProto3{
+        optional_int32: make_ref()
+      }
 
       assert_raise Protox.JsonEncodingError, fn ->
-        Protox.json_encode!(invalid_field, json_library: Poison)
+        Protox.json_encode!(invalid_field)
       end
     end
   end
