@@ -1,6 +1,7 @@
 # 2.0.0 (unreleased)
   - BREAKING CHANGE: Remove generated defs/0 function
   - BREAKING CHANGE: Remove Protox.Encode.encode/1 and Protox.Encode.encode!/1
+  - BREAKING CHANGE: The JSON library is now configurable via the `:json_library` option at compile time
   - Drop support for Elixir < 1.15
 
 # 1.7.8
